IDXBOOST-PLUGIN/IDXBOOST-COM/idx-boost-master-css/scss/core/helpers/resources/shortcode-sold-properties.scss
.filter {
  color: $colorweb;
  padding: .625rem .9375rem;
  width: 100%;

  @media screen and (min-width: 768px) {
    padding: 1.875rem .9375rem;
  }
}

.filter__top,
.filter__middle {
  display: flex;
  padding: 10px 0;
}

.filter__top {
  justify-content: center;

  @media (min-width: 768px) {
    justify-content: flex-end;
  }
}

.filter__middle {
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  
  @media (min-width: 768px) {
    align-items: center;
    flex-direction: row;
    justify-content: flex-start;
    margin-bottom: 15px;
  }
}

.filter__button {
  background: $colorweb;
  border-radius: 4px;
  color: #fff;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0 auto;
  padding: .575rem .75rem .575rem .75rem;
  text-transform: uppercase;
  transition: all .4s;
  min-width: 120px;

  &:hover,
  &:focus {
    background-color: #ccc;
    color: $colorweb;
  }

  @media (min-width: 768px) {
    
  }

  @media (min-width: 1400px) {
    margin-bottom: 0;
  }
}

.filter__bottom {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;

  .filter__item {
    padding: 4px;

    @media screen and (min-width: 640px) {
      width: 45%;
    }

    @media screen and (min-width: 768px) {
      width: auto;
    }
  }

  input[type="checkbox"] {
    -webkit-appearance: checkbox !important;
    -moz-appearance: checkbox !important;
  }

  label {
    cursor: pointer;
    font-weight: bold;
    margin-right: 25px;
  }
}

.fc-type-property {
  background: #fff;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  display: flex;
  justify-content: center;
}

.fc-type-property__toggle {
  display: none;

  &:checked {
    + .fc-type-property__button {
      background: #4b5f9c;
      color: #fff;
    }
  }
}

.fc-type-property__button {
  border-radius: 4px;
  cursor: pointer;
  display: inline-block;
  font-size: 14/16*1rem;
  font-weight: 400;
  margin: 0;
  min-width: 120px;
  padding: .575rem .75rem .575rem .75rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  transition: all .3s ease-in-out;
  width: auto !important;
}

.fc-select,
.fc-dropdown {
  appearance: none;
  background: url("data:image/svg+xml,<svg width='24' height='24' xmlns='http://www.w3.org/2000/svg'><path d='m0,6l12,12l12,-12l-24,0z'/><path fill='none' d='m0,0l24,0l0,24l-24,0l0,-24z'/></svg>") calc(100% - 10px) 50% / 10px no-repeat transparent;
  background-color: #fff;
  border-radius: .25rem;
  border: 1px solid $gris-lineas;
  color: $colorweb;
  display: inline-block;
  font-size: 1rem;
  font-weight: 400;
  height: calc(1.5em + .75rem + 2px);
  line-height: 1.5;
  transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
  padding: .375rem 1.75rem .375rem .75rem;
  position: relative;
  vertical-align: middle;
  width: 100%;
}

.fc-dropdown {
  padding: 0;
}

.fc-dropdown.show {
  .fc-dropdown__menu {
    display: block;
  }
}

.fc-dropdown__toggle {
  background: transparent;
  color: #495057;
  height: 100%;
  padding: .375rem 1.75rem .375rem .75rem;
  text-align: left;
  width: 100%;
}

.fc-dropdown__menu {
  background-color: #fff;
  border-radius: 4px;
  border: 1px solid $gris-lineas;
  display: none;
  font-size: 13px;
  left: 0;
  margin: .125rem 0 0;
  padding: .75rem 0;
  position: absolute;
  text-align: left;
  top: 100%;
  min-width: 160px;
  width: 100%;
  z-index: 2;  
}

.fc-dropdown__item {
  overflow: hidden;
  padding: .25rem .75rem;
  position: relative;
  width: 100%;

  label {
    cursor: pointer;
    display: inline-block;
    font-size: .75em;
    font-weight: normal;
    margin-bottom: 5px;
    padding-left: 25px;
    position: relative;
    text-transform: none !important;
    width: 100%;

    &::after,
    &::before {
      content: "";
      display: block;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      transition: all .3s linear;
    }

    &::before {
      background-color: #fff;
      border: 1px solid #d6d6d6;
      height: 16px;
      left: 0;
      margin-right: 5px;
      width: 16px;
    }

    &::after {
      background-color: $colorweb;
      height: 10px;
      left: 4px;
      opacity: 0;
      width: 10px;
    }
  }
}

.fc-dropdown__check {
  left: 0;
  position: absolute;
  top: -200px;

  &:checked {
    + label {
      &::before {
        border-color: $colorweb;
      }
      &::after {
        opacity: 1;
      }
    }
  }

}

.fg {
  flex: 1;
  padding: 0 10px;
  margin-bottom: 10px;

  @media (max-width: 767px) {    
    width: 100%;
  }

  @media (min-width: 768px) {
    flex: 0 0 50%;
    margin-bottom: 20px;
  }

  @media (min-width: 1024px) {
    flex: 0 0 25%;
  }

  @media (min-width: 1200px) {
    flex: 1;
  }

  label {
    display: block;
    font-size: 13/16*1rem;
    font-weight: 600;
    margin-bottom: 5px;
    text-align: left;
    text-transform: uppercase;
  }

}

